--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <body>
     Hello, world!
     Stay tuned. Hard reload is currently in the making!
+    Just connected to AWS Amplify
   </body>
 </html>
